# atlas-local-lib-py

./: .gitignore  Cargo.toml  LICENSE-3RD-PARTY.txt  about.hbs  about.toml  deny.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  _perm-test-reusable.yml  check-pr-title.yml  close-jira.yaml  create-jira.yaml  dependabot-jira.yaml  issue-closed.yaml  issue-opened.yaml  issue-reopened.yaml  license.yml  perm-test-caller.yml  test.yml
scripts/: generate-third-party.sh  py_runtime_deps.py
src/: lib.rs
tests/: test_smoke.py
