[package]
authors = ["APIx DevTools team"]
name = "atlas-local-lib-py"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
# This crate ships as a Python wheel (PyPI), never to crates.io.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "atlas_local_lib_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["abi3-py39", "chrono"] }
atlas-local = "0.7.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
